Add audios and pictures, Add the Home Page to display pictures and play audio

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
+@font-face {
+  font-family: "CopyDuck";
+  src: url("/public/assets/fonts/copyduck.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Stickers";
+  src: url("/public/assets/fonts/stickers.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Stickers", sans-serif;
+  /* font-family: "CopyDuck", sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  cursor: url("/public/assets/images/cursor.png"), pointer;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
