--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,31 @@
 .App {
-  background-image: url("/public/assets/images/backgroundImage.svg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   height: 100%;
   width: 100%;
+
+  overflow: hidden;
 
   z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
   cursor: url("/public/assets/images/cursor.png"), auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.App::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-image: url("/public/assets/images/backgroundImage.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
+  filter: blur(5px);
 }
