--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -30,19 +30,29 @@
 
 .buttonDiv button {
   /* font-family: "CopyDuck", sans-serif; */
+  color: white;
   font-size: 1rem;
   padding: 1rem 2rem;
   border: none;
   border-radius: 8px;
-  background-color: #f5f5f5;
+  background-color: #4bbce8;
   transition: transform 0.3s ease, scale 0.3s ease;
   cursor: url("/public/assets/images/cursor.png"), pointer;
+
+  box-shadow: 0 8px 0 0 #3d9ec4;
+  position: relative;
 }
 
 .buttonDiv button:hover {
-  background-color: #e0e0e0;
+  background-color: #4bc7e8;
   transform: scale(1.1);
   transition: transform 0.3s ease, scale 0.3s ease;
+}
+
+.buttonDiv button:active {
+  box-shadow: none;
+  top: 10px;
+  margin-bottom: o;
 }
 
 .fade-out {
